@@ -32,6 +32,7 @@ Following changes may create regressions for some external modules, but were nec
 * verifCond('stringtoevaluate') now return false when string contains a bad syntax content instead of true. 
 * The deprecated method thirdparty_doc_create() has been removed. You can use the generateDocument() instead.
 * All triggers with a name XXX_UPDATE have been rename with name XXX_MODIFY for code consistency purpose.
+* Rename build_path_from_id_categ() into buildPathFromId() and set method to private
 
 
 ***** ChangeLog for 15.0.1 compared to 15.0.0 *****
